[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["chhk <chorhatarahuduketuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[tool.pytest.ini_options]
pythonpath = [".", 'advent_of_code']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
